BZR-141 Изменения в эндпоинте GET /chats/{chatId}/messages
